feat: Enhance task management features and improve UI
- Added a new document outlining review points for the 2025-10-09 updates.
- Updated test expectations in various service and use case specs to reflect new behavior.
- Strengthened attribute handling in Webview and UseCase for task creation and updates.
- Improved TaskEditModal to synchronize state when the task prop changes.
- Enhanced documentation and lint comments for clarity.
- Added new icons for improved UI/UX.
- Refactored task creation and update logic to ensure validation and error handling.
- Updated dependency injection to utilize TaskFactory across services.
- Improved Markdown task parser to handle missing IDs and attribute extraction.
- Adjusted file system task scanner tests for accurate path comparisons.

--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:md-planner.openBoardForCurrentFile"
+  ],
   "main": "./dist/extension.js",
+  "icon": "resources/icon-extension.svg",
   "contributes": {
     "commands": [
       {
         "command": "md-planner.openBoardForCurrentFile",
         "title": "MD Planner: Open Board View",
-        "icon": "$(kanban)",
+        "icon": {
+          "light": "resources/icon-command-light.svg",
+          "dark": "resources/icon-command-dark.svg"
+        },
         "enablement": "resourceLangId == markdown"
       }
     ],
