refactor: update task management to use pnpm and improve code structure
- Changed task dependencies in .vscode/tasks.json from npm to pnpm for consistency.
- Removed MVP completion section from README.md and updated progress details.
- Added new import rules in documentation for better code organization.
- Enhanced TaskEditModal accessibility and keyboard navigation.
- Refactored task attribute handling in create and update use cases for clarity.
- Updated node version in mise.toml to 24.9.0 for compatibility.
- Removed unnecessary imports and improved type handling in various files.
- Deleted vsc-extension-quickstart.md as it was no longer needed.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
   "tasks": [
     {
       "label": "watch",
-      "dependsOn": ["npm: watch:tsc", "npm: watch:esbuild"],
+      "dependsOn": ["pnpm: watch:tsc", "pnpm: watch:esbuild"],
       "presentation": {
         "reveal": "never"
       },
@@ -16,8 +16,13 @@
       "problemMatcher": []
     },
     {
-      "type": "npm",
-      "script": "watch:esbuild",
+      "label": "pnpm: watch:esbuild",
+      "type": "shell",
+      "command": "mise",
+      "args": ["exec", "--", "pnpm", "run", "watch:esbuild"],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
       "group": "build",
       "problemMatcher": {
         "owner": "esbuild",
@@ -37,19 +42,22 @@
         }
       },
       "isBackground": true,
-      "label": "npm: watch:esbuild",
       "presentation": {
         "group": "watch",
         "reveal": "never"
       }
     },
     {
-      "type": "npm",
-      "script": "watch:tsc",
+      "label": "pnpm: watch:tsc",
+      "type": "shell",
+      "command": "mise",
+      "args": ["exec", "--", "pnpm", "run", "watch:tsc"],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
       "group": "build",
       "problemMatcher": "$tsc-watch",
       "isBackground": true,
-      "label": "npm: watch:tsc",
       "presentation": {
         "group": "watch",
         "reveal": "never"
